--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -19,6 +19,7 @@
         "import torch.autograd as autograd\n",
         "from torch.autograd import Variable\n",
         "import torch.optim\n",
+        "import torch.optim.lr_scheduler as lr_scheduler\n",
         "\n",
         "\n",
         "import numpy as np\n",
@@ -36,33 +37,35 @@
         "\n",
         "OPTIMIZERS = [\"SGD\", \"Momentum SGD\", \"Adam\"]\n",
         "LR = [1e-5, 1e-4, 1e-3, 1e-2, 1e-1]\n",
-        "BATCH_SIZE = [4, 8, 16, 32, 64]\n",
+        "BATCH_SIZE = [4, 8, 16, 32, 64, 128]\n",
         "MOMENTUM = [0., 0.5, 0.9]\n",
-        "SCHEDULER = [\"Vanilla\", \"LambdaLR\", \"StepLR\", \"CosineAnnealingLR\"]\n",
+        "SCHEDULER = [\"Vanilla\", \"LinearLR\", \"LambdaLR\", \"StepLR\", \"CosineAnnealingLR\"]\n",
         "\n",
-        "for optim in OPTIMIZERS:\n",
+        "for scheduler in SCHEDULER:\n",
         "  for lr in LR:\n",
-        "    \n",
+        "\n",
         "    # store hyper parameters\n",
         "    hparams  = {\n",
         "        \"model\": \"CNN\",\n",
         "        \"detaset\": \"CIFAR-10\",\n",
-        "        \"optimizer\": optim,\n",
+        "        \"optimizer\": \"SGD\",\n",
         "        \"momentum\": 0.,\n",
         "        \"epochs\": 5,\n",
         "        \"train_batch_size\": 8,\n",
         "        \"eval_batch_size\": 32,\n",
         "        \"lr\": lr,\n",
         "        \"checkpoint\": 100,\n",
+        "        \"scheduler\": scheduler\n",
         "    }\n",
         "\n",
-        "    if optim == \"Momentum SGD\":\n",
+        "    if hparams[\"optimizer\"] == \"Momentum SGD\":\n",
         "      hparams[\"momentum\"] = 0.9\n",
         "\n",
         "    train_bs = hparams[\"train_batch_size\"]\n",
-        "    run_id = f\"{optim}_{lr}_{train_bs}\"\n",
+        "    optim = hparams[\"optimizer\"]\n",
+        "    run_id = f\"{optim}_{lr}_{train_bs}_{scheduler}\"\n",
         "    wandb.init(config=hparams,\n",
-        "              project=\"Naive_CNN\",\n",
+        "              project=\"CNN_lrscheduler_comparison_sgd__v2\",\n",
         "              entity=\"dsa4212-project\",\n",
         "              name=run_id,\n",
         "              )\n",
@@ -96,12 +99,22 @@
         "    elif hparams[\"optimizer\"] == \"Adam\":\n",
         "        optimizer = torch.optim.Adam(model.parameters(), lr=hparams[\"lr\"])\n",
         "\n",
+        "    # scheduler\n",
+        "    if hparams[\"scheduler\"] == \"LambdaLR\":\n",
+        "      lambda1 = lambda epoch: 0.65 ** epoch\n",
+        "      scheduler_inst = torch.optim.lr_scheduler.LambdaLR(optimizer, lr_lambda=lambda1)\n",
+        "    elif hparams[\"scheduler\"] == \"StepLR\":\n",
+        "      scheduler_inst = torch.optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.1)\n",
+        "    elif hparams[\"scheduler\"] == \"CosineAnnealingLR\":\n",
+        "      scheduler_inst = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=10, eta_min=0)\n",
+        "    elif hparams[\"scheduler\"] == \"LinearLR\":\n",
+        "      scheduler_inst = torch.optim.lr_scheduler.LinearLR(optimizer, start_factor=1.0, end_factor=0.5, total_iters=30)\n",
+        "\n",
         "    criterion = nn.CrossEntropyLoss()\n",
         "\n",
         "    print(\"Training Started\")\n",
         "    # training phase\n",
         "    steps_per_epoch = len(train)/hparams['train_batch_size']\n",
-        "    history = []\n",
         "    steps = 0\n",
         "    for epoch in range(hparams[\"epochs\"]):\n",
         "\n",
@@ -111,14 +124,14 @@
         "                      'step': steps,\n",
         "                      'epoch': steps / steps_per_epoch,\n",
         "                  }\n",
+        "            results[\"lr\"] = optimizer.param_groups[0]['lr']\n",
         "\n",
         "            images, labels = data\n",
         "            images, labels = images.to(device), labels.to(device)\n",
         "\n",
         "            optimizer.zero_grad()\n",
         "            loss = F.cross_entropy(model(images), labels)\n",
-        "            # history.append(loss.item())\n",
-        "            results['loss'] = loss.item()\n",
+        "            results['loss'] = loss.item() / hparams[\"train_batch_size\"]\n",
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "\n",
@@ -134,8 +147,10 @@
         "                      total += labels.size(0)\n",
         "                      correct += (pred_label == labels).sum().item()\n",
         "                  results['accuracy'] = 100 * correct / total\n",
-        "\n",
         "            wandb.log(results)\n",
+        "\n",
+        "        if hparams[\"scheduler\"] != \"Vanilla\":\n",
+        "          scheduler_inst.step()\n",
         "\n",
         "    print(\"Training Done\")"
       ]
