add numpy import

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -21,7 +21,7 @@
         "import torch.optim\n",
         "import torch.optim.lr_scheduler as lr_scheduler\n",
         "\n",
-        "\n",
+        "import numpy\n",
         "import numpy as np\n",
         "import jax\n",
         "import jax.numpy as jnp\n",
